parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> func_decl
Rule 2     func_decl -> type ident ( func_decl_args ) block
Rule 3     type -> IDENT
Rule 4     type -> INT
Rule 5     type -> LONG
Rule 6     type -> BOOL
Rule 7     type -> BITS [ DIGITS ]
Rule 8     ident -> IDENT
Rule 9     func_decl_args -> <empty>
Rule 10    func_decl_args -> func_decl_arg
Rule 11    func_decl_args -> func_decl_args , func_decl_arg
Rule 12    func_decl_arg -> type ident
Rule 13    block -> { statements }
Rule 14    block -> statement
Rule 15    statements -> <empty>
Rule 16    statements -> statement
Rule 17    statements -> statements statement
Rule 18    statement -> type ident ;
Rule 19    statement -> type ident = expression ;
Rule 20    statement -> ident = expression ;
Rule 21    statement -> IF ( expression ) block
Rule 22    statement -> WHILE ( expression ) block
Rule 23    statement -> RETURN expression ;
Rule 24    expression -> ident
Rule 25    expression -> constant
Rule 26    constant -> DIGITS
Rule 27    expression -> expression + expression
Rule 28    expression -> expression - expression
Rule 29    expression -> expression * expression
Rule 30    expression -> expression / expression
Rule 31    expression -> expression < expression
Rule 32    expression -> expression > expression
Rule 33    expression -> expression & expression
Rule 34    expression -> expression | expression
Rule 35    expression -> expression EQUAL expression
Rule 36    expression -> expression NOTEQUAL expression
Rule 37    expression -> expression GREATEREQUAL expression
Rule 38    expression -> expression LESSEQUAL expression
Rule 39    expression -> expression LEFTSHIFT expression
Rule 40    expression -> expression RIGHTSHIFT expression
Rule 41    statement -> ident PLUSEQUAL expression ;
Rule 42    statement -> ident MINUSEQUAL expression ;
Rule 43    statement -> ident LEFTSHIFTEQUAL expression ;
Rule 44    statement -> ident RIGHTSHIFTEQUAL expression ;
Rule 45    expression -> ident ( func_args ) MAPSTO type
Rule 46    func_args -> <empty>
Rule 47    func_args -> func_arg
Rule 48    func_args -> func_args , func_arg
Rule 49    func_arg -> ident = ident
Rule 50    expression -> ( expression )

Terminals, with rules where they appear

&                    : 33
(                    : 2 21 22 45 50
)                    : 2 21 22 45 50
*                    : 29
+                    : 27
,                    : 11 48
-                    : 28
/                    : 30
;                    : 18 19 20 23 41 42 43 44
<                    : 31
=                    : 19 20 49
>                    : 32
BITS                 : 7
BOOL                 : 6
DIGITS               : 7 26
EQUAL                : 35
GREATEREQUAL         : 37
IDENT                : 3 8
IF                   : 21
INT                  : 4
LEFTSHIFT            : 39
LEFTSHIFTEQUAL       : 43
LESSEQUAL            : 38
LONG                 : 5
MAPSTO               : 45
MINUSEQUAL           : 42
NOTEQUAL             : 36
PLUSEQUAL            : 41
RETURN               : 23
RIGHTSHIFT           : 40
RIGHTSHIFTEQUAL      : 44
WHILE                : 22
[                    : 7
]                    : 7
error                : 
{                    : 13
|                    : 34
}                    : 13

Nonterminals, with rules where they appear

block                : 2 21 22
constant             : 25
expression           : 19 20 21 22 23 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42 43 44 50
func_arg             : 47 48
func_args            : 45 48
func_decl            : 1
func_decl_arg        : 10 11
func_decl_args       : 2 11
ident                : 2 12 18 19 20 24 41 42 43 44 45 49 49
program              : 0
statement            : 14 16 17
statements           : 13 17
type                 : 2 12 18 19 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . func_decl
    (2) func_decl -> . type ident ( func_decl_args ) block
    (3) type -> . IDENT
    (4) type -> . INT
    (5) type -> . LONG
    (6) type -> . BOOL
    (7) type -> . BITS [ DIGITS ]

    IDENT           shift and go to state 3
    INT             shift and go to state 8
    LONG            shift and go to state 2
    BOOL            shift and go to state 1
    BITS            shift and go to state 6

    type                           shift and go to state 4
    func_decl                      shift and go to state 5
    program                        shift and go to state 7

state 1

    (6) type -> BOOL .

    IDENT           reduce using rule 6 (type -> BOOL .)
    ;               reduce using rule 6 (type -> BOOL .)
    +               reduce using rule 6 (type -> BOOL .)
    -               reduce using rule 6 (type -> BOOL .)
    *               reduce using rule 6 (type -> BOOL .)
    /               reduce using rule 6 (type -> BOOL .)
    <               reduce using rule 6 (type -> BOOL .)
    >               reduce using rule 6 (type -> BOOL .)
    &               reduce using rule 6 (type -> BOOL .)
    |               reduce using rule 6 (type -> BOOL .)
    EQUAL           reduce using rule 6 (type -> BOOL .)
    NOTEQUAL        reduce using rule 6 (type -> BOOL .)
    GREATEREQUAL    reduce using rule 6 (type -> BOOL .)
    LESSEQUAL       reduce using rule 6 (type -> BOOL .)
    LEFTSHIFT       reduce using rule 6 (type -> BOOL .)
    RIGHTSHIFT      reduce using rule 6 (type -> BOOL .)
    )               reduce using rule 6 (type -> BOOL .)


state 2

    (5) type -> LONG .

    IDENT           reduce using rule 5 (type -> LONG .)
    ;               reduce using rule 5 (type -> LONG .)
    +               reduce using rule 5 (type -> LONG .)
    -               reduce using rule 5 (type -> LONG .)
    *               reduce using rule 5 (type -> LONG .)
    /               reduce using rule 5 (type -> LONG .)
    <               reduce using rule 5 (type -> LONG .)
    >               reduce using rule 5 (type -> LONG .)
    &               reduce using rule 5 (type -> LONG .)
    |               reduce using rule 5 (type -> LONG .)
    EQUAL           reduce using rule 5 (type -> LONG .)
    NOTEQUAL        reduce using rule 5 (type -> LONG .)
    GREATEREQUAL    reduce using rule 5 (type -> LONG .)
    LESSEQUAL       reduce using rule 5 (type -> LONG .)
    LEFTSHIFT       reduce using rule 5 (type -> LONG .)
    RIGHTSHIFT      reduce using rule 5 (type -> LONG .)
    )               reduce using rule 5 (type -> LONG .)


state 3

    (3) type -> IDENT .

    IDENT           reduce using rule 3 (type -> IDENT .)
    ;               reduce using rule 3 (type -> IDENT .)
    +               reduce using rule 3 (type -> IDENT .)
    -               reduce using rule 3 (type -> IDENT .)
    *               reduce using rule 3 (type -> IDENT .)
    /               reduce using rule 3 (type -> IDENT .)
    <               reduce using rule 3 (type -> IDENT .)
    >               reduce using rule 3 (type -> IDENT .)
    &               reduce using rule 3 (type -> IDENT .)
    |               reduce using rule 3 (type -> IDENT .)
    EQUAL           reduce using rule 3 (type -> IDENT .)
    NOTEQUAL        reduce using rule 3 (type -> IDENT .)
    GREATEREQUAL    reduce using rule 3 (type -> IDENT .)
    LESSEQUAL       reduce using rule 3 (type -> IDENT .)
    LEFTSHIFT       reduce using rule 3 (type -> IDENT .)
    RIGHTSHIFT      reduce using rule 3 (type -> IDENT .)
    )               reduce using rule 3 (type -> IDENT .)


state 4

    (2) func_decl -> type . ident ( func_decl_args ) block
    (8) ident -> . IDENT

    IDENT           shift and go to state 9

    ident                          shift and go to state 10

state 5

    (1) program -> func_decl .

    $end            reduce using rule 1 (program -> func_decl .)


state 6

    (7) type -> BITS . [ DIGITS ]

    [               shift and go to state 11


state 7

    (0) S' -> program .



state 8

    (4) type -> INT .

    IDENT           reduce using rule 4 (type -> INT .)
    ;               reduce using rule 4 (type -> INT .)
    +               reduce using rule 4 (type -> INT .)
    -               reduce using rule 4 (type -> INT .)
    *               reduce using rule 4 (type -> INT .)
    /               reduce using rule 4 (type -> INT .)
    <               reduce using rule 4 (type -> INT .)
    >               reduce using rule 4 (type -> INT .)
    &               reduce using rule 4 (type -> INT .)
    |               reduce using rule 4 (type -> INT .)
    EQUAL           reduce using rule 4 (type -> INT .)
    NOTEQUAL        reduce using rule 4 (type -> INT .)
    GREATEREQUAL    reduce using rule 4 (type -> INT .)
    LESSEQUAL       reduce using rule 4 (type -> INT .)
    LEFTSHIFT       reduce using rule 4 (type -> INT .)
    RIGHTSHIFT      reduce using rule 4 (type -> INT .)
    )               reduce using rule 4 (type -> INT .)


state 9

    (8) ident -> IDENT .

    (               reduce using rule 8 (ident -> IDENT .)
    +               reduce using rule 8 (ident -> IDENT .)
    -               reduce using rule 8 (ident -> IDENT .)
    *               reduce using rule 8 (ident -> IDENT .)
    /               reduce using rule 8 (ident -> IDENT .)
    <               reduce using rule 8 (ident -> IDENT .)
    >               reduce using rule 8 (ident -> IDENT .)
    &               reduce using rule 8 (ident -> IDENT .)
    |               reduce using rule 8 (ident -> IDENT .)
    EQUAL           reduce using rule 8 (ident -> IDENT .)
    NOTEQUAL        reduce using rule 8 (ident -> IDENT .)
    GREATEREQUAL    reduce using rule 8 (ident -> IDENT .)
    LESSEQUAL       reduce using rule 8 (ident -> IDENT .)
    LEFTSHIFT       reduce using rule 8 (ident -> IDENT .)
    RIGHTSHIFT      reduce using rule 8 (ident -> IDENT .)
    ;               reduce using rule 8 (ident -> IDENT .)
    )               reduce using rule 8 (ident -> IDENT .)
    =               reduce using rule 8 (ident -> IDENT .)
    ,               reduce using rule 8 (ident -> IDENT .)


state 10

    (2) func_decl -> type ident . ( func_decl_args ) block

    (               shift and go to state 12


state 11

    (7) type -> BITS [ . DIGITS ]

    DIGITS          shift and go to state 13


state 12

    (2) func_decl -> type ident ( . func_decl_args ) block
    (9) func_decl_args -> .
    (10) func_decl_args -> . func_decl_arg
    (11) func_decl_args -> . func_decl_args , func_decl_arg
    (12) func_decl_arg -> . type ident
    (3) type -> . IDENT
    (4) type -> . INT
    (5) type -> . LONG
    (6) type -> . BOOL
    (7) type -> . BITS [ DIGITS ]

    )               reduce using rule 9 (func_decl_args -> .)
    ,               reduce using rule 9 (func_decl_args -> .)
    IDENT           shift and go to state 3
    INT             shift and go to state 8
    LONG            shift and go to state 2
    BOOL            shift and go to state 1
    BITS            shift and go to state 6

    func_decl_arg                  shift and go to state 16
    func_decl_args                 shift and go to state 15
    type                           shift and go to state 14

state 13

    (7) type -> BITS [ DIGITS . ]

    ]               shift and go to state 17


state 14

    (12) func_decl_arg -> type . ident
    (8) ident -> . IDENT

    IDENT           shift and go to state 9

    ident                          shift and go to state 18

state 15

    (2) func_decl -> type ident ( func_decl_args . ) block
    (11) func_decl_args -> func_decl_args . , func_decl_arg

    )               shift and go to state 20
    ,               shift and go to state 19


state 16

    (10) func_decl_args -> func_decl_arg .

    )               reduce using rule 10 (func_decl_args -> func_decl_arg .)
    ,               reduce using rule 10 (func_decl_args -> func_decl_arg .)


state 17

    (7) type -> BITS [ DIGITS ] .

    IDENT           reduce using rule 7 (type -> BITS [ DIGITS ] .)
    ;               reduce using rule 7 (type -> BITS [ DIGITS ] .)
    +               reduce using rule 7 (type -> BITS [ DIGITS ] .)
    -               reduce using rule 7 (type -> BITS [ DIGITS ] .)
    *               reduce using rule 7 (type -> BITS [ DIGITS ] .)
    /               reduce using rule 7 (type -> BITS [ DIGITS ] .)
    <               reduce using rule 7 (type -> BITS [ DIGITS ] .)
    >               reduce using rule 7 (type -> BITS [ DIGITS ] .)
    &               reduce using rule 7 (type -> BITS [ DIGITS ] .)
    |               reduce using rule 7 (type -> BITS [ DIGITS ] .)
    EQUAL           reduce using rule 7 (type -> BITS [ DIGITS ] .)
    NOTEQUAL        reduce using rule 7 (type -> BITS [ DIGITS ] .)
    GREATEREQUAL    reduce using rule 7 (type -> BITS [ DIGITS ] .)
    LESSEQUAL       reduce using rule 7 (type -> BITS [ DIGITS ] .)
    LEFTSHIFT       reduce using rule 7 (type -> BITS [ DIGITS ] .)
    RIGHTSHIFT      reduce using rule 7 (type -> BITS [ DIGITS ] .)
    )               reduce using rule 7 (type -> BITS [ DIGITS ] .)


state 18

    (12) func_decl_arg -> type ident .

    )               reduce using rule 12 (func_decl_arg -> type ident .)
    ,               reduce using rule 12 (func_decl_arg -> type ident .)


state 19

    (11) func_decl_args -> func_decl_args , . func_decl_arg
    (12) func_decl_arg -> . type ident
    (3) type -> . IDENT
    (4) type -> . INT
    (5) type -> . LONG
    (6) type -> . BOOL
    (7) type -> . BITS [ DIGITS ]

    IDENT           shift and go to state 3
    INT             shift and go to state 8
    LONG            shift and go to state 2
    BOOL            shift and go to state 1
    BITS            shift and go to state 6

    type                           shift and go to state 14
    func_decl_arg                  shift and go to state 21

state 20

    (2) func_decl -> type ident ( func_decl_args ) . block
    (13) block -> . { statements }
    (14) block -> . statement
    (18) statement -> . type ident ;
    (19) statement -> . type ident = expression ;
    (20) statement -> . ident = expression ;
    (21) statement -> . IF ( expression ) block
    (22) statement -> . WHILE ( expression ) block
    (23) statement -> . RETURN expression ;
    (41) statement -> . ident PLUSEQUAL expression ;
    (42) statement -> . ident MINUSEQUAL expression ;
    (43) statement -> . ident LEFTSHIFTEQUAL expression ;
    (44) statement -> . ident RIGHTSHIFTEQUAL expression ;
    (3) type -> . IDENT
    (4) type -> . INT
    (5) type -> . LONG
    (6) type -> . BOOL
    (7) type -> . BITS [ DIGITS ]
    (8) ident -> . IDENT

    {               shift and go to state 26
    IF              shift and go to state 30
    WHILE           shift and go to state 23
    RETURN          shift and go to state 27
    IDENT           shift and go to state 25
    INT             shift and go to state 8
    LONG            shift and go to state 2
    BOOL            shift and go to state 1
    BITS            shift and go to state 6

    block                          shift and go to state 28
    type                           shift and go to state 24
    ident                          shift and go to state 29
    statement                      shift and go to state 22

state 21

    (11) func_decl_args -> func_decl_args , func_decl_arg .

    )               reduce using rule 11 (func_decl_args -> func_decl_args , func_decl_arg .)
    ,               reduce using rule 11 (func_decl_args -> func_decl_args , func_decl_arg .)


state 22

    (14) block -> statement .

    $end            reduce using rule 14 (block -> statement .)
    }               reduce using rule 14 (block -> statement .)
    IF              reduce using rule 14 (block -> statement .)
    WHILE           reduce using rule 14 (block -> statement .)
    RETURN          reduce using rule 14 (block -> statement .)
    IDENT           reduce using rule 14 (block -> statement .)
    INT             reduce using rule 14 (block -> statement .)
    LONG            reduce using rule 14 (block -> statement .)
    BOOL            reduce using rule 14 (block -> statement .)
    BITS            reduce using rule 14 (block -> statement .)


state 23

    (22) statement -> WHILE . ( expression ) block

    (               shift and go to state 31


state 24

    (18) statement -> type . ident ;
    (19) statement -> type . ident = expression ;
    (8) ident -> . IDENT

    IDENT           shift and go to state 9

    ident                          shift and go to state 32

state 25

    (3) type -> IDENT .
    (8) ident -> IDENT .

    IDENT           reduce using rule 3 (type -> IDENT .)
    =               reduce using rule 8 (ident -> IDENT .)
    PLUSEQUAL       reduce using rule 8 (ident -> IDENT .)
    MINUSEQUAL      reduce using rule 8 (ident -> IDENT .)
    LEFTSHIFTEQUAL  reduce using rule 8 (ident -> IDENT .)
    RIGHTSHIFTEQUAL reduce using rule 8 (ident -> IDENT .)


state 26

    (13) block -> { . statements }
    (15) statements -> .
    (16) statements -> . statement
    (17) statements -> . statements statement
    (18) statement -> . type ident ;
    (19) statement -> . type ident = expression ;
    (20) statement -> . ident = expression ;
    (21) statement -> . IF ( expression ) block
    (22) statement -> . WHILE ( expression ) block
    (23) statement -> . RETURN expression ;
    (41) statement -> . ident PLUSEQUAL expression ;
    (42) statement -> . ident MINUSEQUAL expression ;
    (43) statement -> . ident LEFTSHIFTEQUAL expression ;
    (44) statement -> . ident RIGHTSHIFTEQUAL expression ;
    (3) type -> . IDENT
    (4) type -> . INT
    (5) type -> . LONG
    (6) type -> . BOOL
    (7) type -> . BITS [ DIGITS ]
    (8) ident -> . IDENT

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for LONG resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for BITS resolved as shift
    }               reduce using rule 15 (statements -> .)
    IF              shift and go to state 30
    WHILE           shift and go to state 23
    RETURN          shift and go to state 27
    IDENT           shift and go to state 25
    INT             shift and go to state 8
    LONG            shift and go to state 2
    BOOL            shift and go to state 1
    BITS            shift and go to state 6

  ! IF              [ reduce using rule 15 (statements -> .) ]
  ! WHILE           [ reduce using rule 15 (statements -> .) ]
  ! RETURN          [ reduce using rule 15 (statements -> .) ]
  ! IDENT           [ reduce using rule 15 (statements -> .) ]
  ! INT             [ reduce using rule 15 (statements -> .) ]
  ! LONG            [ reduce using rule 15 (statements -> .) ]
  ! BOOL            [ reduce using rule 15 (statements -> .) ]
  ! BITS            [ reduce using rule 15 (statements -> .) ]

    ident                          shift and go to state 29
    statements                     shift and go to state 34
    type                           shift and go to state 24
    statement                      shift and go to state 33

state 27

    (23) statement -> RETURN . expression ;
    (24) expression -> . ident
    (25) expression -> . constant
    (27) expression -> . expression + expression
    (28) expression -> . expression - expression
    (29) expression -> . expression * expression
    (30) expression -> . expression / expression
    (31) expression -> . expression < expression
    (32) expression -> . expression > expression
    (33) expression -> . expression & expression
    (34) expression -> . expression | expression
    (35) expression -> . expression EQUAL expression
    (36) expression -> . expression NOTEQUAL expression
    (37) expression -> . expression GREATEREQUAL expression
    (38) expression -> . expression LESSEQUAL expression
    (39) expression -> . expression LEFTSHIFT expression
    (40) expression -> . expression RIGHTSHIFT expression
    (45) expression -> . ident ( func_args ) MAPSTO type
    (50) expression -> . ( expression )
    (8) ident -> . IDENT
    (26) constant -> . DIGITS

    (               shift and go to state 37
    IDENT           shift and go to state 9
    DIGITS          shift and go to state 35

    ident                          shift and go to state 36
    constant                       shift and go to state 39
    expression                     shift and go to state 38

state 28

    (2) func_decl -> type ident ( func_decl_args ) block .

    $end            reduce using rule 2 (func_decl -> type ident ( func_decl_args ) block .)


state 29

    (20) statement -> ident . = expression ;
    (41) statement -> ident . PLUSEQUAL expression ;
    (42) statement -> ident . MINUSEQUAL expression ;
    (43) statement -> ident . LEFTSHIFTEQUAL expression ;
    (44) statement -> ident . RIGHTSHIFTEQUAL expression ;

    =               shift and go to state 42
    PLUSEQUAL       shift and go to state 43
    MINUSEQUAL      shift and go to state 41
    LEFTSHIFTEQUAL  shift and go to state 40
    RIGHTSHIFTEQUAL shift and go to state 44


state 30

    (21) statement -> IF . ( expression ) block

    (               shift and go to state 45


state 31

    (22) statement -> WHILE ( . expression ) block
    (24) expression -> . ident
    (25) expression -> . constant
    (27) expression -> . expression + expression
    (28) expression -> . expression - expression
    (29) expression -> . expression * expression
    (30) expression -> . expression / expression
    (31) expression -> . expression < expression
    (32) expression -> . expression > expression
    (33) expression -> . expression & expression
    (34) expression -> . expression | expression
    (35) expression -> . expression EQUAL expression
    (36) expression -> . expression NOTEQUAL expression
    (37) expression -> . expression GREATEREQUAL expression
    (38) expression -> . expression LESSEQUAL expression
    (39) expression -> . expression LEFTSHIFT expression
    (40) expression -> . expression RIGHTSHIFT expression
    (45) expression -> . ident ( func_args ) MAPSTO type
    (50) expression -> . ( expression )
    (8) ident -> . IDENT
    (26) constant -> . DIGITS

    (               shift and go to state 37
    IDENT           shift and go to state 9
    DIGITS          shift and go to state 35

    ident                          shift and go to state 36
    expression                     shift and go to state 46
    constant                       shift and go to state 39

state 32

    (18) statement -> type ident . ;
    (19) statement -> type ident . = expression ;

    ;               shift and go to state 48
    =               shift and go to state 47


state 33

    (16) statements -> statement .

    }               reduce using rule 16 (statements -> statement .)
    IF              reduce using rule 16 (statements -> statement .)
    WHILE           reduce using rule 16 (statements -> statement .)
    RETURN          reduce using rule 16 (statements -> statement .)
    IDENT           reduce using rule 16 (statements -> statement .)
    INT             reduce using rule 16 (statements -> statement .)
    LONG            reduce using rule 16 (statements -> statement .)
    BOOL            reduce using rule 16 (statements -> statement .)
    BITS            reduce using rule 16 (statements -> statement .)


state 34

    (13) block -> { statements . }
    (17) statements -> statements . statement
    (18) statement -> . type ident ;
    (19) statement -> . type ident = expression ;
    (20) statement -> . ident = expression ;
    (21) statement -> . IF ( expression ) block
    (22) statement -> . WHILE ( expression ) block
    (23) statement -> . RETURN expression ;
    (41) statement -> . ident PLUSEQUAL expression ;
    (42) statement -> . ident MINUSEQUAL expression ;
    (43) statement -> . ident LEFTSHIFTEQUAL expression ;
    (44) statement -> . ident RIGHTSHIFTEQUAL expression ;
    (3) type -> . IDENT
    (4) type -> . INT
    (5) type -> . LONG
    (6) type -> . BOOL
    (7) type -> . BITS [ DIGITS ]
    (8) ident -> . IDENT

    }               shift and go to state 50
    IF              shift and go to state 30
    WHILE           shift and go to state 23
    RETURN          shift and go to state 27
    IDENT           shift and go to state 25
    INT             shift and go to state 8
    LONG            shift and go to state 2
    BOOL            shift and go to state 1
    BITS            shift and go to state 6

    ident                          shift and go to state 29
    type                           shift and go to state 24
    statement                      shift and go to state 49

state 35

    (26) constant -> DIGITS .

    +               reduce using rule 26 (constant -> DIGITS .)
    -               reduce using rule 26 (constant -> DIGITS .)
    *               reduce using rule 26 (constant -> DIGITS .)
    /               reduce using rule 26 (constant -> DIGITS .)
    <               reduce using rule 26 (constant -> DIGITS .)
    >               reduce using rule 26 (constant -> DIGITS .)
    &               reduce using rule 26 (constant -> DIGITS .)
    |               reduce using rule 26 (constant -> DIGITS .)
    EQUAL           reduce using rule 26 (constant -> DIGITS .)
    NOTEQUAL        reduce using rule 26 (constant -> DIGITS .)
    GREATEREQUAL    reduce using rule 26 (constant -> DIGITS .)
    LESSEQUAL       reduce using rule 26 (constant -> DIGITS .)
    LEFTSHIFT       reduce using rule 26 (constant -> DIGITS .)
    RIGHTSHIFT      reduce using rule 26 (constant -> DIGITS .)
    ;               reduce using rule 26 (constant -> DIGITS .)
    )               reduce using rule 26 (constant -> DIGITS .)


state 36

    (24) expression -> ident .
    (45) expression -> ident . ( func_args ) MAPSTO type

    ;               reduce using rule 24 (expression -> ident .)
    +               reduce using rule 24 (expression -> ident .)
    -               reduce using rule 24 (expression -> ident .)
    *               reduce using rule 24 (expression -> ident .)
    /               reduce using rule 24 (expression -> ident .)
    <               reduce using rule 24 (expression -> ident .)
    >               reduce using rule 24 (expression -> ident .)
    &               reduce using rule 24 (expression -> ident .)
    |               reduce using rule 24 (expression -> ident .)
    EQUAL           reduce using rule 24 (expression -> ident .)
    NOTEQUAL        reduce using rule 24 (expression -> ident .)
    GREATEREQUAL    reduce using rule 24 (expression -> ident .)
    LESSEQUAL       reduce using rule 24 (expression -> ident .)
    LEFTSHIFT       reduce using rule 24 (expression -> ident .)
    RIGHTSHIFT      reduce using rule 24 (expression -> ident .)
    )               reduce using rule 24 (expression -> ident .)
    (               shift and go to state 51


state 37

    (50) expression -> ( . expression )
    (24) expression -> . ident
    (25) expression -> . constant
    (27) expression -> . expression + expression
    (28) expression -> . expression - expression
    (29) expression -> . expression * expression
    (30) expression -> . expression / expression
    (31) expression -> . expression < expression
    (32) expression -> . expression > expression
    (33) expression -> . expression & expression
    (34) expression -> . expression | expression
    (35) expression -> . expression EQUAL expression
    (36) expression -> . expression NOTEQUAL expression
    (37) expression -> . expression GREATEREQUAL expression
    (38) expression -> . expression LESSEQUAL expression
    (39) expression -> . expression LEFTSHIFT expression
    (40) expression -> . expression RIGHTSHIFT expression
    (45) expression -> . ident ( func_args ) MAPSTO type
    (50) expression -> . ( expression )
    (8) ident -> . IDENT
    (26) constant -> . DIGITS

    (               shift and go to state 37
    IDENT           shift and go to state 9
    DIGITS          shift and go to state 35

    ident                          shift and go to state 36
    constant                       shift and go to state 39
    expression                     shift and go to state 52

state 38

    (23) statement -> RETURN expression . ;
    (27) expression -> expression . + expression
    (28) expression -> expression . - expression
    (29) expression -> expression . * expression
    (30) expression -> expression . / expression
    (31) expression -> expression . < expression
    (32) expression -> expression . > expression
    (33) expression -> expression . & expression
    (34) expression -> expression . | expression
    (35) expression -> expression . EQUAL expression
    (36) expression -> expression . NOTEQUAL expression
    (37) expression -> expression . GREATEREQUAL expression
    (38) expression -> expression . LESSEQUAL expression
    (39) expression -> expression . LEFTSHIFT expression
    (40) expression -> expression . RIGHTSHIFT expression

    ;               shift and go to state 54
    +               shift and go to state 66
    -               shift and go to state 57
    *               shift and go to state 64
    /               shift and go to state 60
    <               shift and go to state 59
    >               shift and go to state 62
    &               shift and go to state 63
    |               shift and go to state 58
    EQUAL           shift and go to state 67
    NOTEQUAL        shift and go to state 61
    GREATEREQUAL    shift and go to state 65
    LESSEQUAL       shift and go to state 56
    LEFTSHIFT       shift and go to state 53
    RIGHTSHIFT      shift and go to state 55


state 39

    (25) expression -> constant .
